fix small spacing issue

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -131,7 +131,6 @@ h3 {
 
 .nav-stats {
 	color: #999;
-	margin: 10px 0;
 	padding: 0 1px 7px 1px;
 	border-top: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
